apps/keycloak/keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 0
  selector:
    matchLabels:
      app: keycloak
      component: keycloak
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keycloak
        component: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:15.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          startupProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 30
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            failureThreshold: 2
            periodSeconds: 30
      restartPolicy: Always
      automountServiceAccountToken: false
