apps/keycloak/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cf.containeroo.ch/type: CNAME
    cf.containeroo.ch/content: ${BASE_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: sso.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
